# atoma-proxy

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  cursor.toml  docker-compose.test.yaml  docker-compose.yaml
.github/workflows/: ci.yml  release.yml
atoma-auth/: Cargo.toml
atoma-auth/src/: auth.rs  config.rs  lib.rs
atoma-auth/src/sui/: mod.rs
atoma-client/: Cargo.toml
atoma-client/src/: lib.rs  main.rs
atoma-daemon/: Cargo.toml
atoma-daemon/src/: config.rs  daemon.rs  lib.rs
atoma-proxy/: Cargo.toml
atoma-proxy-service/: Cargo.toml
atoma-proxy-service/docs/: openapi.yml
atoma-proxy-service/src/: config.rs  lib.rs  proxy_service.rs  query.rs
atoma-proxy-service/src/components/: openapi.rs
atoma-proxy-service/src/handlers/: auth.rs  mod.rs  stacks.rs  stats.rs  subscriptions.rs  tasks.rs
atoma-proxy/docs/: openapi.yml
atoma-proxy/src/: main.rs
atoma-proxy/src/server/: chat_completions.rs  config.rs  error.rs  http_server.rs  middleware.rs  mod.rs  streamer.rs  types.rs
atoma-proxy/src/server/components/: openapi.rs
atoma-proxy/src/server/handlers/: chat_completions.rs  embeddings.rs  image_generations.rs  mod.rs  request_model.rs  select_node_public_key.rs
atoma-proxy/src/sui/: mod.rs
atoma-state/: Cargo.toml
atoma-state/src/: config.rs  handlers.rs  lib.rs  state_manager.rs  types.rs
atoma-state/src/migrations/: 20241213104339_create_initial_schema.sql  20241215163130_nodes-public-urls.sql  20241219081058_add_sui_address_to_users.sql  20241219152013_key_rotations.sql  20241220131705_add_balance_table.sql  20241226220231_remove_foreign_keys.sql  20241230125157_add_timestamp_to_stack.sql  20241230131705_add_balance_table.sql
