[workspace]
members = [ "atoma-client","atoma-proxy", "atoma-state"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
atoma-state = { path = "./atoma-state" }
atoma-sui = { git = "https://github.com/atoma-network/atoma-node.git", package = "atoma-sui", branch = "main" }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
thiserror = "1.0.65"
tokio = "1.41.0"
tracing = "0.1.40"
config = "0.14.1"
serde = "1.0.214"
serde_json = "1.0.132"
toml = "0.8.19"
flume = "0.11.1"
