[workspace]
members = ["atoma-proxy-service", "atoma-proxy", "atoma-state"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
atoma-proxy-service = { path = "./atoma-proxy-service" }
atoma-state = { path = "./atoma-state" }
atoma-sui = { git = "https://github.com/atoma-network/atoma-node.git", package = "atoma-sui", branch = "main" }
atoma-utils = { git = "https://github.com/atoma-network/atoma-node.git", package = "atoma-utils", branch = "main" }
axum = "0.7.7"
blake2 = "0.10.6"
clap = "4.5.20"
config = "0.14.1"
flume = "0.11.1"
futures = "0.3.31"
hf-hub = "0.3.2"
reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
thiserror = "1.0.65"
tokenizers = "0.20.3"
tokio = "1.41.0"
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
utoipa = "5.2.0"
utoipa-swagger-ui = "8.0.3"
