[workspace]
resolver = "2"
members = ["atoma-auth", "atoma-proxy-service", "atoma-proxy", "atoma-state"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.91"
async-trait = "0.1.83"
atoma-auth = { path = "./atoma-auth" }
atoma-proxy-service = { path = "./atoma-proxy-service" }
atoma-state = { path = "./atoma-state" }
atoma-sui = { git = "https://github.com/atoma-network/atoma-node.git", package = "atoma-sui", branch = "main" }
atoma-utils = { git = "https://github.com/atoma-network/atoma-node.git", package = "atoma-utils", branch = "main" }
axum = "0.7.7"
base64 = "0.22.1"
blake2 = "0.10.6"
chrono = "0.4.38"
clap = "4.5.20"
config = "0.14.1"
dcap-qvl = "0.1.6"
flume = "0.11.1"
futures = "0.3.31"
hf-hub = "0.3.2"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
reqwest = "0.12.9"
serde = "1.0.214"
serde_json = "1.0.132"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio-native-tls",
] }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys", tag = "testnet-v1.39.1" }
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk", tag = "testnet-v1.39.1" }
thiserror = "1.0.65"
tokenizers = "0.20.3"
tokio = "1.41.0"
toml = "0.8.19"
tower = "0.5.1"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
utoipa = "5.2.0"
utoipa-swagger-ui = "8.0.3"
x25519-dalek = "2.0.1"
zeroize = "1.8.1"
