[package]
name = "atoma-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
atoma-state.workspace = true
atoma-utils.workspace = true
bcs.workspace = true
blake2.workspace = true
chrono.workspace = true
config.workspace = true
fastcrypto.workspace = true
flume.workspace = true
hex = "0.4.3"
jsonwebtoken.workspace = true
rand = "0.8.5"
serde = { workspace = true, features = ["derive"] }
shared-crypto.workspace = true
sui-sdk.workspace = true
tokio.workspace = true
tracing.workspace = true
