[package]
name = "atoma-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
sui-sdk = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
clap = "4.5.20"
