[package]
name = "atoma-proxy-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
atoma-auth.workspace = true
atoma-state.workspace = true
atoma-sui.workspace = true
axum.workspace = true
config.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
