[package]
name = "atoma-proxy-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
atoma-auth.workspace = true
atoma-state.workspace = true
atoma-sui.workspace = true
axum.workspace = true
config.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sui-sdk.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true }
