[package]
name = "atoma-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
atoma-state.workspace = true
atoma-sui.workspace = true
axum.workspace = true
blake2.workspace = true
clap.workspace = true
config.workspace = true
flume.workspace = true
futures = { workspace = true }
hf-hub = { workspace = true }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml = { workspace = true }
sqlx.workspace = true
sui-keys.workspace = true
sui-sdk.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "time"] }
tracing.workspace = true
tokenizers.workspace = true
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
