[package]
name = "atoma-state"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
atoma-sui = { workspace = true }
chrono.workspace = true
config = { workspace = true }
dcap-qvl = { workspace = true }
flume = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "runtime-tokio-native-tls", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
